--- a/core/components/guzzle6/docs/tutorial.html
+++ b/core/components/guzzle6/docs/tutorial.html
@@ -1,20 +1,257 @@
-<p>Guzzle6 project for MyComponent extra</p>
+<h3>Guzzle 6</h3>
 
-<p>(Jump to <a href="[[~[[*id]]]]#propertiesTable">Properties Table</a>.)</p>
+<p>Guzzle is rapidly becoming the standard for reliably making and processing HTTP requests. This extra does nothing by itself. It simply installs the Guzzle 6 files and autoloader for use on your site without the hassle of rolling your own cUrl code. Guzzle will use cURL if it's installed on your site, or it will use PHP streams if not. Guzzle 6 also includes <a href="http://docs.guzzlephp.org/en/stable/psr7.html">PSR7 capabilities</a>, though I haven't used them.</p>
 
+<p>I don't claim to be an expert at Guzzle. The examples below work, but I can't guarantee that they are best practices.</p>
+
+<p>This tutorial provides some simple examples for using Guzzle to fetch web pages, check if a remote URL exists, or download files from a web site. Most of the code below is from the UpgradeMODX extra.</p>
+
+<br>
 <h3>Installing Guzzle6</h3>
 
 <p>
-Go to System | Package Management on the main menu in the MODX Manager and click on the &quot;Download Extras&quot; button. That will take you to the
-Revolution Repository (AKA Web Transport Facility). Put Guzzle6 in the search box and press Enter. Click on the &quot;Download&quot; button, and once the package is downloaded,
- click on the &quot;Back to Package Manager&quot; button. That should bring you back to your Package Management grid. Click on the
-&quot;Install&quot; button next to Guzzle6 in the grid. The Guzzle6 package should now be installed.</p>
+Go to System | Package Management on the main menu in the MODX Manager and click on the &quot;Download Extras&quot; button. That will take you to the Revolution Repository. Put Guzzle6 in the search box and press Enter. Click on the &quot;Download&quot; button, and once the package is downloaded, click on the &quot;Back to Package Manager&quot; button. That should bring you back to your Package Management grid. Click on the &quot;Install&quot; button next to Guzzle6 in the grid. The Guzzle6 package should now be installed.</p>
 
-<h3>Usage</h3>
+<br>
+<h3>Basic Usage</h3>
+
+<p>For any code that uses Guzzle, you should include some version of these lines at the very top of your code (just below the PHP tag):</p>
+
+<pre><fixedpre>
+use GuzzleHttp\Client;
+use GuzzleHttp\Exception\ClientException;
+/* Include these if you need Psr7 support */
+// use GuzzleHttp\Psr7;
+// use GuzzleHttp\Psr7\Request;
+
+/* This next line can go anywhere, as long as it's above any code that uses Guzzle */
+
+require_once MODX_CORE_PATH . 'components/guzzle6/vendor/autoload.php';
+</fixedpre></pre>
+
+<p>Once you've included the lines above you can use any Guzzle 6 features. There are some examples below, but you can also consult the <a href="//docs.guzzlephp.org/en/stable/">Guzzle Documentation</a>.</p>
+
+<br>
+<h3>Simplest Possible Request</h3>
+
+<p>This will get the content from a web page or URL and echo it to the screen:</p>
+
+<pre><fixedpre>
+$client = new \GuzzleHttp\Client();
+$url = '//api.github.com/repos/modxcms/revolution/tags';
+$response = $client->request('GET', $url);
+echo $response->getBody();
+</fixedpre></pre>
+
+<div class="box">
+ <p>Important: The examples below are inside a class. They will need to be modified if you use them outside of a
+  class.</p>
+</div>
+
+<br>
+<h3>Parsing Guzzle Errors</h3>
+
+<p>Before we get to the more rest of the examples, this is a handy function I created for parsing messages from Guzzle exceptions:</p>
+
+<pre><fixedpre>
+
+ /**
+ * Creates beautified error message based on
+ * exception thrown
+ *
+ * @param $e GuzzleHttp\Exception\RequestException
+ * @param $verbose - Show the full, raw message
+ * @return string - Error message based on Exception
+ *
+ */
+public function parseException($e, $verbose = false) {
+    /** @var  $response \Psr\Http\Message\MessageInterface */
+    $msg = $e->getMessage();
+    $prefix = $this->modx->lexicon('ugm_no_version_list_from_github') . ' -- ';
+    $retVal = $msg; // default to entire message;
+    $code = $e->getCode();
+
+    if ($e->hasResponse()) {
+        $response = $e->getResponse();
+        $rawMessage = $response->getBody();
+        $message = json_decode( (string) $rawMessage);
+        if (empty($message)) {
+            $message = $response->getReasonPhrase();
+            $retVal = $code . ' ' . $message;
+        } else {
+            $ex = (array) $message;
+            $retVal = $code . ' ' . $ex['message'];
+        }
+    } elseif (empty($code) || ($code >= 500)) {
+        $code = ((int) $code === 0) ? 'No Code Returned' : $code;
+        $retVal = $code . ' ' . 'Connection error (no internet?)';
+    }
+    $retVal = $verbose? $prefix . ' ' . $msg : $prefix . $retVal;
+    return $retVal;
+}
+</fixedpre></pre>
+
+
+<br>
+<h3>Adding Some Options</h3>
+
+<p>This method is a little more complex, since it gets data from GitHub, and has options for the API response, authentication, exception handling, and SSL verification:</p>
+
+<pre><fixedpre>
+/**
+ * * Gets raw JSON version list from GitHub
+ *  Long param list is mainly for unit tests
+ *
+ * @throws \GuzzleHttp\Exception\ClientException
+ * @throws \GuzzleHttp\Exception\GuzzleException
+ * @param $url string -- GitHub URL
+ * @param $githubTimeout int
+ * @param $verifyPeer bool
+ * @param null $githubUsername string
+ * @param null $githubToken string
+ * @param null $certPath string -- optional path to SSL cert file
+ * @param bool $verbose -- show verbose error messages
+ *
+ *
+ * @return mixed returns JSON version list as string or false on failure
+ */
+public function getRawVersions($url, $githubTimeout = 6, $verifyPeer = true,
+        $githubUsername = null, $githubToken = null, $certPath = null,
+        $verbose = false) {
+    /* Create the client */
+    $this->client = new \GuzzleHttp\Client();
+
+    $options = array();
+    if ((!empty($githubUsername)) && (!empty($githubToken))) { // use token if set
+        $options['auth'] = array($githubUsername, $githubToken);
+    }
+    $options['header'] = array (
+        'Cache-Control' => 'no-cache',
+        'Accept' => 'application/json',
+    );
+    if (!empty ($certPath))  {
+        $options['cert'] = $this->certPath;
+    }
+
+    $options['timeout'] = $githubTimeout;
+
+    if ($verifyPeer !== true) {
+        $options['verify'] = false;
+    }
+
+    try {
+        $response = $this->client->request('GET', $url, $options);
+        $retVal = $response->getBody();
+    } catch (RequestException $e) {
+        $msg = $this->parseException($e, $verbose);
+        $retVal = false;
+    } catch (\Exception $e) {
+        /** @var $e \GuzzleHttp\Exception\RequestException */
+        $msg = $this->parseException($e, $verbose);
+        $retVal = false;
+    }
+    return $retVal;
+}
+
+</fixedpre></pre>
+
+<p>Rather than have so many arguments, the method above could easily use class variables set elsewhere in the class (say, in the initialization() method). The multiple arguments make the method's behavior easier to test with unit tests.</p>
+
+<br>
+<h3>See if a Remote URL exists</h3>
+
+<p>This makes a very simple request to verify that the URL can be reached without problems. It will report a variety of kinds of HTTP errors and failures. It returns <code>true</code> if things went well. If not, it returns <code>false</code> and writes the error to the MODX error log.</p>
+
+<p>It's handy for use in a link checker. UpgradeMODX uses it to make sure the MODX .zip file is available before downloading it.</p>
+
+<pre><fixedpre>
+public function remoteFileExists($url) {
+        /** @var $client GuzzleHttp\Client */
+        $client = $this->client;
+
+        try {
+            $client->head($url);
+            return true;
+        } catch (GuzzleHttp\Exception\ClientException $e) {
+            $this->modx->log(modX::LOG_LEVEL_ERROR, 'Request Failed: ' . $this->parseException($e));
+            return false;
+        } catch (/Exception $e) {
+            $this->modx->log(modX::LOG_LEVEL_ERROR, 'Request Failed: ' . $this->parseException($e));
+            return false;
+        }
+    }
+</fixedpre></pre>
+
+
+<br>
+<h3>Downloading a File</h3>
+
+<p>This method downloads a .zip file from a URL. In this case the <code>$options</code> argument is required, since it tells Guzzle where to put the downloaded file. The method also shows an example of catching an exception, then throwing a new one that can be caught in the method that calls this one. I also throws its own exception if the file if the downloaded file is empty.</p>
+
+<pre><fixedpre>
+/** @throws Exception
+* @throws GuzzleException
+*/
+
+public function download() {
+
+    /* See if the file is available for download */
+    if (!$this->remoteFilexists()) {
+        throw new Exception($this->modx->lexicon('ugm_no_such_version'));
+    }
+
+    $client = $this->client;
+    $destFile = fopen($this->destinationPath, 'w');
+    if (!$destFile) {
+        $msg = '[Download Files Processor] ' .
+            $this->modx->lexicon('ugm_could_not_open') . ' ' .
+            $this->destinationPath . ' ' . $this->modx->lexicon('ugm_for_writing');
+        throw new Exception($msg);
+
+    }
+
+    set_time_limit(0);
+    $options = array(
+        RequestOptions::SINK => $destFile, // the body of a response
+        RequestOptions::CONNECT_TIMEOUT => $this->modxTimeout,    // request
+        RequestOptions::VERIFY => (bool) $this->sslVerifyPeer,
+       // RequestOptions::TIMEOUT => 0.0,    // response
+    );
+
+    if (!empty($this->certPath)) {
+        $options[RequestOptions::CERT] = $this->certPath;
+    }
+
+    $options['headers'] = array(
+        'Cache-Control' => 'no-cache',
+        'Accept' => 'application/zip'
+    );
+
+    try {
+        $response = $client->request('GET', $this->sourceUrl, $options);
+    } catch (Exception $e) {
+        fclose($destFile);
+        unlink($this->destinationPath);
+        throw new exception($this->modx->lexicon('ugm_download_failed') . ' -- ' . $e->getMessage());
+    }
+
+    fclose($destFile);
+
+    if (filesize($this->destinationPath) === 0) {
+        throw new exception($this->modx->lexicon('ugm_download_failed')
+            . ' Filesize: 0');
+    } else {
+        $msg = $this->modx->lexicon('ugm_downloaded') . ' ' . $_SESSION['ugm_version'] .
+            ' -> ' . $this->destinationPath;
+        echo $msg;
+    }
+}
+
+</fixedpre></pre>
+
+
+<p>&nbsp;</p>
 
 
 
 
-<a name="propertiesTable"></a>
-
-<h3>Guzzle6 Properties</h3>
